# Profiler

./: .gitignore  =2.0  CLAUDE.md  OPTIMIZATIONS.json  OPTIMIZATIONS.md  OPTIMIZATION_PROMPT.md  OPTIMIZED_WORKLOAD.md  README.md  _dynamo_explain_output.txt  comparison.md  example.md  optimizations.json  profile.corr.json  profile.json  profile.part.json  profile2.json  profile_optimized.json  prompt.md  pyproject.toml  report.md  requirements.txt  test_transformer_stack_optimized.py  test_workload_optimized.py  transformer_stack_optimized.py  triage.json  validation_report.json
.claude/: settings.local.json
.claude-plugin/: marketplace.json
examples/conv_block/: OPTIMIZED_WORKLOAD.md  comparison.md  conv_block_optimized.py  implementation_notes.md  optimizations.json  optimized_workload.md  profile.json  profile_optimized.json  report.md  test_conv_block_optimized.py  triage.json  validation_report.json
examples/depthwise_separable_conv/: comparison.md  depthwise_separable_conv_optimized.py  optimizations.json  optimized_workload.md  profile.json  profile_optimized.json  report.md  test_depthwise_separable_conv_optimized.py  triage.json  validation_report.json
examples/embedding_projection/: OPTIMIZED_WORKLOAD.md  embedding_projection.py  embedding_projection_optimized.py  optimizations.json  optimized_workload.md  profile.json  profile_optimized.json  report.md  test_embedding_projection_optimized.py  triage.json  validation_report.json
examples/gpt2/: OPTIMIZED_WORKLOAD.md  comparison.md  gpt2.py  gpt2_optimized.py  optimizations.json  profile.json  profile_optimized.json  report.md  triage.json  (+2 more)
operator_profiler/: __init__.py
profiler_output/: workload2.corr.json
prompts/: optimization_implementation_prompt.md  optimization_proposal_prompt.md
report/: 00README.json  abstract.tex  appendix_exp.tex  background.tex  conclusion.tex  intro.tex  macro_small.tex  main.tex  main_experiment.tex  method.tex  notation.tex  refs.bib  related_work.tex
scripts/: check_hardware.py  inductor_workload.py  nvtx_workload.py  real_hardware_demo.py  run_all_profiles.py  verify_ncu_pipeline.py  verify_preprocessing_pipeline.py  workload.py  workload_optimized.py
(+835 files in other folders)
