[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operator-profiler"
version = "0.1.0"
description = "GPU profiler: attribute hardware metrics to PyTorch operators and get LLM-powered optimization feedback"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = [
    "anthropic",
]

[project.scripts]
operator-profiler = "operator_profiler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["operator_profiler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires CUDA GPU + nsys/ncu on PATH",
]
addopts = "-m 'not integration'"
