[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operator-profiler"
version = "0.1.0"
description = "GPU profiler: attribute hardware metrics to PyTorch operators"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
operator-profiler = "operator_profiler.cli:main"

[tool.setuptools.packages.find]
where = ["nvidia"]
include = ["operator_profiler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires CUDA GPU + nsys/ncu on PATH",
]
addopts = "-m 'not integration'"
